--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@radix-ui/react-slot": "^1.2.3",
     "@tailwindcss/vite": "^4.1.13",
+    "axios": "^1.13.2",
     "class-variance-authority": "^0.7.1",
     "emailjs-com": "^3.2.0",
     "framer-motion": "^12.23.21",
